<resources>
    <string name="app_name">小助</string>
    <string name="title_activity_work">我的作业</string>
    <string name="my_work_name">我的作业</string>
    <string name="course_table_settings">课表设置</string>
    <string name="course_table_name">课表名称</string>
    <string name="default_course_table_name">default</string>
    <string name="start_date_tips">学期开始日期</string>
    <string name="start_school_time_tips">2021–3–1</string>
    <string name="now_week_tips">当前周</string>
    <string name="now_week_default">第 7 周</string>
    <string name="day_course_section_tips">每日课程节数</string>
    <string name="day_course_section_default">15 节</string>
    <string name="week_sum_tips">学期总周数</string>
    <string name="week_sum_default">21 周</string>
    <string name="day_course_change_tips">每节课时间调整</string>
    <string name="day_course_change_default">点击此处更改</string>
    <string name="is_show_weekend_tips">是否显示周末</string>
    <string name="is_use_tips">启用上课提醒功能</string>
    <string name="set_remind_time_tips">设置提醒时间</string>
    <string name="default_remind_time">剩余 20 分钟</string>
    <string name="get_class_time_change">上课时间表调整</string>
    <string name="same_course_rest_time_tips">同一讲课间休息时间</string>
    <string name="same_course_time_default">5 分钟</string>
    <string name="no_same_course_rest_time_tips">不同讲课间休息时间</string>
    <string name="no_same_course_rest_time_default">15 分钟</string>
    <string name="every_section_course_class_time_tips">每节课的上课时间</string>
    <string name="every_time_class_time_default">45 分钟</string>
    <string name="handle_change_time_list_tips">手动调整时间表</string>
    <string name="head_page_showing_radom_poems">你若盛开，清风自来。</string>
    <string name="head_page_showing_default_date">4月2日 星期五</string>
    <string name="head_page_button_my_work_tips">我的作业</string>
    <string name="head_page_my_course_tips">我的课表</string>
    <string name="default_id_adress">欢迎使用本软件，您将成为更好的自己！</string>
    <string name="default_user_name">小助</string>
    <string name="select_color_tips">颜色选取</string>
    <string name="set_person_color_tips">自定义颜色</string>
    <string name="get_class_week_sum_tips">上课周数</string>
    <string name="person_tips">自定义</string>
    <string name="single_week_tips">单周</string>
    <string name="double_week_tips">双周</string>
    <string name="all_week_tips">全周</string>
    <string name="chip_week_1"> 1 </string>
    <string name="chip_week_2"> 2 </string>
    <string name="X_ext">×</string>
    <string name="detail_course_tips">课程详情</string>
    <string name="submit_button_tips">√</string>
    <string name="next_course_remind_tips">下次课提醒：</string>
    <string name="now_no_course_tips">当前暂无课程</string>
    <string name="now_course_tips">当前课程</string>
    <string name="head_page_add_work_tips">添加作业</string>
    <string name="wait_submit_work_list_tips">待完成作业列表</string>
    <string name="current_no_work_tips">空空如也，快点我添加作业吧！</string>
    <string name="work_submit_use_tips">启用作业提交提醒功能</string>
    <string name="work_settings_tips">作业设置</string>
    <string name="default_work_remind_time">剩余 2 天</string>
    <string name="is_allow_ring_tips">是否允许响铃</string>
    <string name="is_allow_vibrates_tips">是否允许震动</string>
    <string name="last_submit_time_tips">提交截至日期：</string>
    <string name="course_name_tips">科目：</string>
    <string name="work_content_tips">作业内容：</string>
    <string name="add_work_tips">添加作业</string>
    <string name="work_content_hint_default">例如：习题 2.1、2.2、2.3</string>
    <string name="letter_X">X</string>
    <string name="icon_cha">×</string>
    <string name="upload_pictures_tips">上传照片</string>
    <string name="work_detail_tips">作业详情</string>
    <string name="course_name_work_tips">科目：</string>
    <string name="work_content_detail_tips">作业内容：</string>
    <string name="rest_time_tips">剩余时间：</string>
    <string name="is_completed_tips">是否完成：</string>
    <string name="not_completed_tips">未完成</string>
    <string name="completed_tips">已完成</string>
    <string name="please_input_work_tips">请输入作业内容</string>
    <string name="more_works_tips">更多作业</string>
    <string name="only_show_not_completed_work_tips">只显示未完成作业</string>
    <string name="only_show_completed_work_tips">只显示已完成作业</string>
    <string name="show_all_work_tips">显示所有作业</string>
    <string name="delete_work_items_tips">删除作业</string>
    <string name="work_manage_tips">作业管理</string>
    <string name="dialog_course_name_tips">课程名称</string>
    <string name="have_to_fill_tips">必填</string>
    <string name="get_class_place_tips">上课地点</string>
    <string name="not_have_to_fill_tips">非必填</string>
    <string name="teacher_tips">授课教师</string>
    <string name="get_class_section_tips">上课节数</string>
    <string name="class_time_tips">08:50-09:35</string>
    <string name="one">1</string>
    <string name="credits_tips">学分</string>
    <string name="remark_tips">备注</string>
    <string name="work_manage_item_tips">作业管理</string>
    <string name="course_table_manage_item_tips">课表管理</string>
    <string name="work_settings_item_tips">作业设置</string>
    <string name="system_settings_item_tips">系统设置</string>
    <string name="course_table_settings_item_tips">课表设置</string>
</resources>