<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.courseSettings.settingsTime.SettingsTimeActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_settings_time"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:theme="@style/ToolBarStyle" >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_class_time_change"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="@dimen/title_size" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            style="@style/SettingsShowFontStyle"
            android:text="@string/same_course_rest_time_tips"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <com.google.android.material.textview.MaterialTextView
            style="@style/SettingsTipsFontStyle"
            android:id="@+id/setting_time_same_break_time"
            android:text="@string/same_course_time_default"/>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingsShowFontStyle"
                android:text="@string/no_same_course_rest_time_tips"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingsTipsFontStyle"
                android:id="@+id/setting_time_different_break_time"
                android:text="@string/no_same_course_rest_time_default"/>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingsShowFontStyle"
                android:text="@string/every_section_course_class_time_tips"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingsTipsFontStyle"
                android:id="@+id/setting_time_one_class_time"
                android:text="@string/every_time_class_time_default"/>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/SettingsShowFontStyle"
            android:layout_marginTop="20dp"
            android:text="@string/handle_change_time_list_tips" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="match_parent">

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:id="@+id/settings_time_view"
                android:layout_height="match_parent"/>

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</com.google.android.material.circularreveal.CircularRevealLinearLayout>