<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_class_week_sum_tips"
            android:layout_gravity="center"
            android:textColor="@color/colorThemeFont"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/all_week"
            android:id="@+id/select_week_type_group"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/person_week"
                android:layout_width="match_parent"
                android:checked="false"
                android:layout_height="wrap_content"
                android:textSize="@dimen/week_font_tips_size"
                android:text="@string/person_tips" />
            <RadioButton
                android:id="@+id/single_week"
                android:textSize="@dimen/week_font_tips_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_week_tips" />

            <RadioButton
                android:id="@+id/double_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/week_font_tips_size"
                android:text="@string/double_week_tips" />

            <RadioButton
                android:id="@+id/all_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/week_font_tips_size"
                android:text="@string/all_week_tips" />
        </RadioGroup>

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        app:singleSelection="false"
        android:id="@+id/select_week_group"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:text=" 1 "
            style="@style/Chip_Week_Select"
            tools:ignore="HardcodedText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:text=" 2 "
            style="@style/Chip_Week_Select"
            tools:ignore="HardcodedText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:text=" 3 "
            style="@style/Chip_Week_Select"
            tools:ignore="HardcodedText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:text=" 4 "
            style="@style/Chip_Week_Select"
            tools:ignore="HardcodedText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:text=" 5 "
            style="@style/Chip_Week_Select"
            tools:ignore="HardcodedText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            android:text=" 6 "
            style="@style/Chip_Week_Select"
            tools:ignore="HardcodedText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            android:text=" 7 "
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            android:text=" 8 "
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            android:text=" 9 "
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            android:text="1 0"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            android:text="1 1"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip12"
            android:text="1 2"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip13"
            android:text="1 3"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip14"
            android:text="1 4"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip15"
            android:text="1 5"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip16"
            android:text="1 6"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip17"
            android:text="1 7"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip18"
            android:text="1 8"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip19"
            android:text="1 9"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip20"
            android:text="2 0"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip21"
            android:text="2 1"
            tools:ignore="HardcodedText"
            style="@style/Chip_Week_Select" />
    </com.google.android.material.chip.ChipGroup>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>